<resources>
    <string name="app_name">Voice</string>
    <string name="sEmail">Email</string>
    <string name="sFullname">Fullname</string>
    <string name="sPassword">Password</string>
    <string name="sPhone">Phone</string>
    <string name="loginButt">Already have account ? Click here!</string>
    <string name="registerButt">"Don't have account yet ? Click Here"</string>
    <string name="title">Welcome to the Vojs</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profilovka">profilovka</string>
</resources>